--- a/d3/index.html
+++ b/d3/index.html
@@ -6,9 +6,9 @@
     Bubble Map
 </h1>
 <h2>
-    <b>Group by: </b>     on_street
+    <b>Group by: </b>     route
     <br>
-    <b>Metric: </b> avg_board
+    <b>Metric: </b> route_count
 </h2>
 <style>
     h1{
@@ -27,7 +27,7 @@
 <script src="d3.min.js"></script>
 <script>
 
-    var diameter = 1200,
+    var diameter = 1400,
             format = d3.format(",d"),
             color = d3.scale.category20c();
 
