--- a/d3/index.html
+++ b/d3/index.html
@@ -6,9 +6,9 @@
     Bubble Map
 </h1>
 <h2>
-    <b>Group by: </b>     route
+    <b>Group by: </b>     on_street
     <br>
-    <b>Metric: </b> route_count
+    <b>Metric: </b> on_street_count
 </h2>
 <style>
     h1{
