--- a/gmaps/heat_map.html
+++ b/gmaps/heat_map.html
@@ -3,7 +3,7 @@
         <html>
             <head>
             <meta charset="utf-8">
-            <title>Heatmaps</title>
+            <title>Heatmap</title>
                 
         <style>
         html, body {
