--- a/d3/bubble.html
+++ b/d3/bubble.html
@@ -8,7 +8,7 @@
         <h2>
             <b>Group by: </b>     on_street 
             <br>
-            <b>Metric: </b> avg_board
+            <b>Metric: </b> on_street_count
         </h2>
         <style>
             h1{
